--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 	                             mzk,
 	                             mzk-devel,
 	                             ntk,
-	                             production-editor, 
-	                             production-editor-devel 
+	                             vsup
 -->
 	
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
